@@ -26,6 +26,9 @@ The next two buttons in the action drawer edit the header and description respec
 ** Moving headers
 *** The next 4 buttons in the action drawer (the up, down, left, and right arrows) move the selected header.
 *** The left and right chevrons move the selected header and its entire nested subtree. Give them a try!
+** Focusing
+*** The next button "focuses" on a header, hiding all others and promoting it to the top level.
+*** This is purely visual - your org file isn't affected under the hood. Press the button again to "unfocus".
 ** Undoing
 *** The next button is Undo. This works just like Emacs-style undo in that your history is completely linear and you can "undo undos".
 ** Syncing
